--- a/details.html
+++ b/details.html
@@ -21,7 +21,7 @@
         </div>
         <div class="item2 ">
             <a>
-                <a href="doan.html"><img style="width: 80px;height: 28px;margin-left: 20px;margin-top: 18px;" src="nike.jpeg"></a>
+                <a href="index.html"><img style="width: 80px;height: 28px;margin-left: 20px;margin-top: 18px;" src="nike.jpeg"></a>
                 <div id="menu">
                     <ul>
                         <li><a href="salelist.html">Nam
